@@ -1,3 +1,7 @@
+2010-08-01  Kingpin  <Martin@BLUEMAX>
+
+	* lib/WWW/Search/Ebay.pm (_result_count_pattern): fixed regexen for result count, price, date
+
 2010-05-20  Kingpin  <Martin@BLUEMAX>
 
 	* lib/WWW/Search/Ebay.pm (_parse_enddate): fixed the time-remaining regex
